changed outline of html and added css style

--- a/01-HTML-Git-CSS/01-Activities/day-02/08-Stu_Attributes/Unsolved/assets/css/style.css
+++ b/01-HTML-Git-CSS/01-Activities/day-02/08-Stu_Attributes/Unsolved/assets/css/style.css
@@ -11,9 +11,19 @@
 }
 
 #github {
-  background-color: lightsteelblue
+  background-color: lightsteelblue;
 }
 
 #portfolio {
   background-color: darkorange;
+}
+p {
+  size: 24px;
+}
+img {
+  width: 200px;
+  height: 200px;
+}
+ul {
+  size: 24px;
 }
