rereading Readme.md made style and layout changes

--- a/01-HTML-Git-CSS/01-Activities/day-02/08-Stu_Attributes/Unsolved/assets/css/style.css
+++ b/01-HTML-Git-CSS/01-Activities/day-02/08-Stu_Attributes/Unsolved/assets/css/style.css
@@ -17,13 +17,16 @@
 #portfolio {
   background-color: darkorange;
 }
-p {
+
+.p {
   size: 24px;
 }
-img {
+
+.img {
   width: 200px;
   height: 200px;
 }
-ul {
+
+.ul {
   size: 24px;
 }
