--- a/01-HTML-Git-CSS/01-Activities/day-02/10-Stu_CSS-color/Unsolved/assets/css/style.css
+++ b/01-HTML-Git-CSS/01-Activities/day-02/10-Stu_CSS-color/Unsolved/assets/css/style.css
@@ -1,20 +1,38 @@
 .section {
-    width: 200px;
-    height: 100px;
-  }
-  
-.section-blue {
-
+  width: 200px;
+  height: 100px;
 }
-  
-.container {
 
+.section-blue {
+}
+
+.container {
+  background-color: black;
 }
 
 #section-1 {
+  background-color: purple;
+  color: yellow;
+}
 
+#section-2 {
+  background-color: blue;
+  color: orange;
+}
+
+#section-3 {
+  background-color: blue;
+  color: orange;
+}
+
+#section-4 {
+  color: white;
+}
+
+#section-5 {
+  color: white;
 }
 
 #section-6 {
-
+  color: yellow;
 }
