--- a/01-HTML-Git-CSS/01-Activities/day-02/10-Stu_CSS-color/Unsolved/assets/css/style.css
+++ b/01-HTML-Git-CSS/01-Activities/day-02/10-Stu_CSS-color/Unsolved/assets/css/style.css
@@ -13,26 +13,38 @@
 #section-1 {
   background-color: purple;
   color: yellow;
+  width: 200px;
+  height: 100px;
 }
 
 #section-2 {
   background-color: blue;
   color: orange;
+  width: 200px;
+  height: 100px;
 }
 
 #section-3 {
   background-color: blue;
   color: orange;
+  width: 200px;
+  height: 100px;
 }
 
 #section-4 {
   color: white;
+  width: 200px;
+  height: 100px;
 }
 
 #section-5 {
   color: white;
+  width: 200px;
+  height: 100px;
 }
 
 #section-6 {
   color: yellow;
+  width: 200px;
+  height: 100px;
 }
