--- a/01-HTML-Git-CSS/01-Activities/day-02/12-Stu_CSS-units-font/Unsolved/assets/css/style.css
+++ b/01-HTML-Git-CSS/01-Activities/day-02/12-Stu_CSS-units-font/Unsolved/assets/css/style.css
@@ -1,19 +1,19 @@
 /* TODO: Add typography */
 .section {
-    background-color: #fffacd;
+  background-color: #fffacd;
 }
 
 /* Fact 1 */
 #fact-1 {
-  font-weight: bolder;
+  font-weight: bold;
 }
 
 /* TODO: Fact 2 */
 #fact-2 {
-
+  font-size: 24px;
 }
 
 /* TODO: Fact 3 */
 #fact-3 {
-  
+  line-height: 50px;
 }
