added font to css

--- a/01-HTML-Git-CSS/01-Activities/day-02/12-Stu_CSS-units-font/Unsolved/assets/css/style.css
+++ b/01-HTML-Git-CSS/01-Activities/day-02/12-Stu_CSS-units-font/Unsolved/assets/css/style.css
@@ -1,6 +1,8 @@
 /* TODO: Add typography */
 .section {
   background-color: #fffacd;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 /* Fact 1 */
