added selectors to css

--- a/01-HTML-Git-CSS/01-Activities/day-02/12-Stu_CSS-units-font/Unsolved/assets/css/style.css
+++ b/01-HTML-Git-CSS/01-Activities/day-02/12-Stu_CSS-units-font/Unsolved/assets/css/style.css
@@ -5,6 +5,24 @@
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
+.section-baby_spiders {
+  font-size: large;
+  font-weight: bold;
+  background-color: #fffacd;
+}
+
+.section-beds {
+  font-size: large;
+  font-weight: bold;
+  background-color: #fffacd;
+}
+
+.section-powerful_squirrels {
+  font-size: large;
+  font-weight: bold;
+  background-color: #fffacd;
+}
+
 /* Fact 1 */
 #fact-1 {
   font-weight: bold;
