aded comments to selectors  css

--- a/01-HTML-Git-CSS/01-Activities/day-02/14-Stu_CSS-selectors/Unsolved/assets/css/style.css
+++ b/01-HTML-Git-CSS/01-Activities/day-02/14-Stu_CSS-selectors/Unsolved/assets/css/style.css
@@ -1,9 +1,9 @@
-/* TODO: Label selector type */
+/* TODO: Label selector type - Universal Sector */
 * {
-    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-  }
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+}
 
-/* TODO: Label selector type */
+/* TODO: Label selector type - Type Selector */
 body {
   background-color: lemonchiffon;
 }
