aded css column

--- a/01-HTML-Git-CSS/01-Activities/day-03/16-Stu_HTML-display/Unsolved/assets/css/style.css
+++ b/01-HTML-Git-CSS/01-Activities/day-03/16-Stu_HTML-display/Unsolved/assets/css/style.css
@@ -57,5 +57,20 @@ img {
 #image-3 {
   /* TODO: Add your code here */
   display: list-item;
-  display: inline-block;
+}
+
+.middle-column {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.middle-column div {
+  flex-grow: 1;
+  margin: 0 8px;
+  border: solid 1px red;
+}
+
+.middle-column div + div {
+  margin-top: 8px;
 }
