added to margin, padding and border to Img css

--- a/01-HTML-Git-CSS/01-Activities/day-03/18-Stu_CSS-box-model/Unsolved/assets/css/style.css
+++ b/01-HTML-Git-CSS/01-Activities/day-03/18-Stu_CSS-box-model/Unsolved/assets/css/style.css
@@ -10,6 +10,10 @@ img {
   height: 200px;
   background-color: lightblue;
   /* TODO: Add a margin property */
+  margin: 20px;
   /* TODO: Add a padding property */
+  padding: 25px;
   /* TODO: Add a border property */
+  border: 15px;
+  color: blue;
 }
